--- a/ERHS_535_presentation_jn.Rmd
+++ b/ERHS_535_presentation_jn.Rmd
@@ -14,7 +14,7 @@ What is the most frequently mentioned country in Jeopardy?
 
 
 
-Is there a correlation between land area and mentions in Jeopardy?
+Is there a correlation between land area or GDP and mentions in Jeopardy?
 
 
 
@@ -155,7 +155,7 @@ leaflet(country_geom_map_data) %>%
 ## Results
 - France is the most mentioned country coming in at 1,070 mentions throughout all the seasons. 
 
-- 
+- The country with biger landarea or higher GDP has higher chance to be mentioned in Jeopardy.
 
 - 
 
