--- a/ERHS_535_presentation_jn.Rmd
+++ b/ERHS_535_presentation_jn.Rmd
@@ -9,85 +9,40 @@ output: slidy_presentation
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## Research Questions
-What is the most frequently mentioned country in Jeopardy? 
-
+## Research Questions:
+Which countries are most frequently-mentioned in Jeopardy, and how does that relate to the frequency of daily doubles? 
 
 
 Is there a correlation between land area or GDP and mentions in Jeopardy?
 
 
-
-What is the frequency of mentions in DailyDouble for each country?
-```{r}
-
-```
-
 ## Introduction
 
+- Geography, a ripe field for questions in its own right, could also be indicative of values and expectations over time. 
+- We were also excited to get more experience exploring mapping in R, and this seemed like a good opportunity.
+
+
 ### Methods
-- Read in Jeopardy question data compiled by Github user `jwolle1`; initially (at all?) used Season 1
 
-- Used `read_csv` from the `readr` package, although we manully downloaded the full dataset, a zipped file.
+## Data Processing
 
-- The raw data already conformed to tidy data conventions, so no special pre-processing was needed on this front.
+- We started with Github user `jwolle`'s extensive Jeopardy archives, which span from September 1984 to July of this year. These were easy to read in using `tidyverse` tools
 
-## Next Steps . . .
-- We needed a list of names associated with countries
+- To generate a list of country names, we drew on a set up country synonyms from the `rworldmap` package, as well as an HTML table of country names, adjectives, and demonyms from Wikipedia using the `rvest` web scraping package. 
 
-- Our basis was the `CountrySynomnyms` dataframe from the `rworldmap` package, this included up to 8 synonymous names for every country recognized as of 2005 (as well as historical country names), along with 3-letter abbreviations following the ISO3 standard. 
+- We used regex matching with package `stringr` to extract instances of names in our country list from Jeopardy questions and answers.
 
-- We used the `pivot_longer` function from `tidyr` to convert this dataframe to two columns: ISO3 names and names (NAs were removed).
+- United Nations ISO3 codes (FRA for France, GBR for Britain, etc.) were the backbone of our dataset, allowing us to associate terms (e.g. we linked "China","Chinese","PRC",  and "People's Republic of China", to the ISO3 code "CHN")
 
-## Next Steps Continued . . .
-- To expand this dataset, names from the "lengthend" country names dataframe were matched against a list of country adjectives and demonyms (e.g. "Russian", "Russians") scraped from the Wikipedia page using the `rvest` package.
+- Naturally, there were some complications; most notably, "Indian" frequently referred to Native Americans, which we were able to partially mitigate from Category context (e.g. "Colonial America", "Native Americans"). 
 
-- These additional names were also converted to a single column, and matched to ISO3 codes.
+- Another interesting wrinkle was words like "French" and "Dutch", which are both an adjective and a demonym, being double-counted, briefly making France appear to be the most popular country in Jeopardy history. 
 
-## Matching Names
-- We then used the `str_detect` and `str_extract_all` functions from `stringr` in tandem to locate and extract matches in Jeopardy questions or answers. 
-  
-- We avoided some false positives (e.g. "Indiana" includes the string "India") by excluding any match that was follwed by a letter (our target list included both singualr and plural forms of country adjectives/demonyms). 
-  
-## Finally . . .
+## Mapping
 
-* Because `str_extract_all` generates a list, we used <an option> to add NA values to equialize the products' lengths, and `unnest` from <`?`> to convert these into separate rows.
+- We matched our ISO3-linked jeopardy data to geographic data (vector polygons defining borders, among other information) from the `rworldmap` package using the `join` family of functions from `dplyr`
 
-* We added the source (question or answer) as a metadata column, and merged both derived datasets to get a total frequency.
-
-
-## Mapping:
-
-- The resulting table, with the original jeopardy data, our fequency tallies, and the ISO3 codes, was matched to a world map <*~`LowRest~` or something*> bundled with `rworldmap`, which also included ISO3 codes. 
-```{r}
-library("ggplot2")
-library(leaflet)
-library(tidyverse)
-source("country_dataframes.R") #To get country_all_isoobject; can comment this pout if already loaded
-
-test_geom <- countriesLow %>% 
-  st_as_sf
-
-test_geom_full <- country_all_iso %>%
-  group_by(iso3) %>%
-  mutate(mean_value = mean(value)) %>%
-  add_tally(name = "count") %>%
-  ungroup() %>%
-  mutate(iso3 = toupper(iso3),
-         iso3 = as.factor(iso3)) %>%
-  rename(ISO3 = iso3) %>%
-  full_join(test_geom) %>%
-  mutate(ISO3 = as.factor(ISO3)) %>%
-  clean_names() %>%
-  st_as_sf
-view(test_geom_full)
-```
-
-- From there, were were able to use the `leaflet` package to make an interactive world mapwith frequncy of references in jeopardy color-coded with the `scheme we end up using` in <`ggplot?`>
-
-## What is the most frequently mentioned country in Jeopardy? 
-
-- We used leaflet package to map out out the countries mentioned, how many times they were mentiones and the population of each country. 
+- Once summarized (to optimize memory usage) and converted into an `sf`, or *simple feature* format, we were able to pass these objects to theinteractive mapping package `leaflet`, among other downstream applications.
 
 ```{r Leaflet Map, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
@@ -144,18 +99,13 @@ leaflet(country_geom_map_data) %>%
 
 
 ```
-## Is there a correlation between land area and mentions in Jeopardy?
-- 
-```{r}
 
-```
-## What is the frequency of mentions in DailyDouble for each country?
-- 
-
+ 
 ## Results
 - France is the most mentioned country coming in at 1,070 mentions throughout all the seasons. 
 
 - The country with biger landarea or higher GDP has higher chance to be mentioned in Jeopardy.
+
 
 - 
 
@@ -169,8 +119,61 @@ leaflet(country_geom_map_data) %>%
 ## Lessons Learned
 
 
+## Code Overview and More-Detailed Methods
+
+- Read in Jeopardy question data compiled by Github user `jwolle1`; initially (at all?) used Season 1
+
+- Used `read_csv` from the `readr` package, although we manully downloaded the full dataset, a zipped file.
+
+- The raw data already conformed to tidy data conventions, so no special pre-processing was needed on this front.
+
+## Next Steps . . .
+- We needed a list of names associated with countries
+
+- Our basis was the `CountrySynomnyms` dataframe from the `rworldmap` package, this included up to 8 synonymous names for every country recognized as of 2005 (as well as historical country names), along with 3-letter abbreviations following the ISO3 standard. 
+
+- We used the `pivot_longer` function from `tidyr` to convert this dataframe to two columns: ISO3 names and names (NAs were removed).
+
+## Next Steps Continued . . .
+- To expand this dataset, names from the "lengthend" country names dataframe were matched against a list of country adjectives and demonyms (e.g. "Russian", "Russians") scraped from the Wikipedia page using the `rvest` package.
+
+- These additional names were also converted to a single column, and matched to ISO3 codes.
+
+## Matching Names
+- We then used the `str_detect` and `str_extract_all` functions from `stringr` in tandem to locate and extract matches in Jeopardy questions or answers. 
+  
+- We avoided some false positives (e.g. "Indiana" includes the string "India") by excluding any match that was follwed by a letter (our target list included both singualr and plural forms of country adjectives/demonyms). 
+  
+## Finally . . .
+
+* Because `str_extract_all` generates a list, we used <an option> to add NA values to equialize the products' lengths, and `unnest` from <`?`> to convert these into separate rows.
+
+* We added the source (question or answer) as a metadata column, and merged both derived datasets to get a total frequency.
+
+
+## Mapping:
+
+- The resulting table, with the original jeopardy data, our fequency tallies, and the ISO3 codes, was matched to a world map <*~`LowRest~` or something*> bundled with `rworldmap`, which also included ISO3 codes.
 
 
 
+```{r}
+  
+```
 
 
+
+- From there, were were able to use the `leaflet` package to make an interactive world mapwith frequncy of references in jeopardy color-coded with the `scheme we end up using` in <`ggplot?`>
+
+## What is the most frequently mentioned country in Jeopardy? 
+
+- We used leaflet package to map out out the countries mentioned, how many times they were mentiones and the population of each country. 
+
+
+## Is there a correlation between land area and mentions in Jeopardy?
+- 
+```{r}
+
+```
+## What is the frequency of mentions in DailyDouble for each country?
+- 
