--- a/ERHS_535_presentation_jn.Rmd
+++ b/ERHS_535_presentation_jn.Rmd
@@ -77,6 +77,9 @@ library(leaflet)
 library("dplyr")
 library(viridisLite)
 library(janitor)
+library(lubridate)
+library(broom)
+library(plotly)
 
   country_data_all <-read_csv("country_all_iso_all.csv", )
 
@@ -132,9 +135,99 @@ leaflet(country_geom_map_data) %>%
 
 - Russia, being both relatively popular and a massive 16,679,993 km^2, almost single-handedly sets this trend (see animation), although the next-largest countries in Canada (9458907 km^2), the USA (9210753 km^2) and China (9198094 km^2) are relatively popular as well. 
 
+```{r}
+
+
+jeopardy_all_season  <-  country_data_all%>%
+  mutate(year = year(air_date)) %>%
+  group_by(iso3, year) %>%
+  add_tally(name = "count") %>%
+  ungroup() %>%
+  mutate(iso3 = toupper(iso3),
+         iso3 = as.factor(iso3)) %>%
+  rename(ISO3V10 = iso3) %>%
+  full_join(countryExData) %>%
+  filter(!is.na(count)) %>%
+  rename(iso3 = "ISO3V10") %>%
+  clean_names() %>%
+  mutate(ratio = count / landarea)
+
+
+
+jeopardy_all_season %>%
+  select(iso3, landarea, year, geo_subregion, count) %>%
+  #filter(iso3 != 'USA') %>%
+  distinct() %>%
+  group_by(year) %>% #summarize(number = n()) %>% arrange(desc(number)) %>%
+  drop_na() %>%
+  nest() %>%
+  mutate(model = purrr::map(data, ~lm(count ~ landarea, data = .x) %>% 
+                              tidy() %>% select(term, estimate))) %>%
+  unnest(c(model)) %>% #arrange(desc(p.value)) <-- all p values are <0.05
+  pivot_wider(names_from = term, values_from = estimate) %>%
+  clean_names %>%
+  rename(slope = landarea) %>%
+  unnest(data) %>%
+  ggplot() +
+  geom_point(aes(x = landarea, y = count, color = year)) +
+  geom_abline(aes(slope = slope, intercept = intercept, color = year))
+
+
+
+ggplotly(jeopardy_all_season %>%
+  select(iso3, landarea, year, epi_regions, count) %>%
+  #filter(iso3 != 'USA') %>%
+  distinct() %>%
+  group_by(year, epi_regions) %>% #summarize(number = n()) %>% arrange(desc(number)) %>%
+  drop_na() %>%
+  nest() %>%
+  mutate(model = purrr::map(data, ~lm(count ~ landarea, data = .x) %>% 
+                              tidy() %>% select(term, estimate))) %>%
+  unnest(c(model)) %>% #arrange(desc(p.value)) <-- all p values are <0.05
+  pivot_wider(names_from = term, values_from = estimate) %>%
+  clean_names %>%
+  rename(slope = landarea) %>%
+  unnest(data) %>%
+  ggplot() +
+  geom_point(aes(x = landarea, y = count, frame = year, color = epi_regions, label = iso3)) +
+  geom_abline(aes(slope = slope, intercept = intercept, frame = year, color = epi_regions))
+)
+
+```
+
 ## GDP and Frequency:
 
 - GDP also showed a positive correlation with frequency of mentions; in this case the USA played an outsize role
+
+```{r}
+
+
+ggplotly(jeopardy_all_season %>%
+           select(iso3, gdp_capita_mrya, year, epi_regions, count) %>%
+           #filter(iso3 != 'USA') %>%
+           distinct() %>%
+           group_by(year) %>% #summarize(number = n()) %>% arrange(desc(number)) %>%
+           drop_na() %>%
+           nest() %>%
+           mutate(model = purrr::map(data, ~lm(count ~ gdp_capita_mrya, data = .x) %>% 
+                                       tidy() %>% select(term, estimate))) %>%
+           unnest(c(model)) %>% #arrange(desc(p.value)) <-- all p values are <0.05
+           pivot_wider(names_from = term, values_from = estimate) %>%
+           clean_names %>%
+           rename(slope = gdp_capita_mrya) %>%
+           unnest(data) %>%
+           ggplot() +
+           geom_point(aes(x = gdp_capita_mrya, y = count, frame = year, color = epi_regions, label = iso3)) +
+           geom_abline(aes(slope = slope, intercept = intercept, frame = year))
+)
+
+```
+
+
+## Daily Doubles
+
+
+
 
 ## Conclusion
 
